--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-
+    <div class="js-basics">
+        <h3 class="js-basics__title">Основи JS</h3>
+        <button onclick="basics1()" class="js-basics__button">Task1</button>
+        <button onclick="basics2()" class="js-basics__button">Task2</button>
+        <button onclick="basics3()" class="js-basics__button">Task3</button>
+        <button onclick="basics4()" class="js-basics__button">Task4</button>
+        <button onclick="basics5()" class="js-basics__button">Task5</button>
+        <button onclick="basics6()" class="js-basics__button">Task6</button>
+        <button onclick="basics7()" class="js-basics__button">Task7</button>
+        <button onclick="basics8()" class="js-basics__button">Task8</button>
+        <button onclick="basics9()" class="js-basics__button">Task9</button>
+        <button onclick="basics10()" class="js-basics__button">Task10</button>
+    </div>
     <script src="./index.js"></script>
 </body>
 
