--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
+
     <div class="js-basics">
         <h3 class="js-basics__title">Основи JS</h3>
         <button id="task1.1" class="js-basics__button">Task1</button>
