Added second HW

--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
         <button id="task1.10" class="js-basics__button">Task10</button>
     </div>
 
+    <div class="js-basics">
+        <h3 class="js-basics__title">Types JS</h3>
+        <button id="task2.1" class="js-basics__button">Task1</button>
+        <button id="task2.2" class="js-basics__button">Task2</button>
+        <button id="task2.3" class="js-basics__button">Task3</button>
+        <button id="task2.4" class="js-basics__button">Task4</button>
+        <button id="task2.5" class="js-basics__button">Task5</button>
+        <button id="task2.6" class="js-basics__button">Task6</button>
+        <button id="task2.7" class="js-basics__button">Task7</button>
+        <button id="task2.8" class="js-basics__button">Task8</button>
+        <button id="task2.9" class="js-basics__button">Task9</button>
+        <button id="task2.10" class="js-basics__button">Task10</button>
+    </div>
     <script src="./index.js"></script>
 </body>
 
