--- a/index.html
+++ b/index.html
@@ -9,37 +9,44 @@
 </head>
 
 <body>
-    <div id="stars"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
+    <main class="main">
+        <section class="js-module">
+            <h1 class="js-module__title">JS module</h1>
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+            <div class="js-module__container">
+                <div class="js-block">
+                    <h3 class="js-block__title">Основи JS</h3>
+                    <button id="task1.1" class="js-block__button">Task1</button>
+                    <button id="task1.2" class="js-block__button">Task2</button>
+                    <button id="task1.3" class="js-block__button">Task3</button>
+                    <button id="task1.4" class="js-block__button">Task4</button>
+                    <button id="task1.5" class="js-block__button">Task5</button>
+                    <button id="task1.6" class="js-block__button">Task6</button>
+                    <button id="task1.7" class="js-block__button">Task7</button>
+                    <button id="task1.8" class="js-block__button">Task8</button>
+                    <button id="task1.9" class="js-block__button">Task9</button>
+                    <button id="task1.10" class="js-block__button">Task10</button>
+                </div>
 
-    <div class="js-basics">
-        <h3 class="js-basics__title">Основи JS</h3>
-        <button id="task1.1" class="js-basics__button">Task1</button>
-        <button id="task1.2" class="js-basics__button">Task2</button>
-        <button id="task1.3" class="js-basics__button">Task3</button>
-        <button id="task1.4" class="js-basics__button">Task4</button>
-        <button id="task1.5" class="js-basics__button">Task5</button>
-        <button id="task1.6" class="js-basics__button">Task6</button>
-        <button id="task1.7" class="js-basics__button">Task7</button>
-        <button id="task1.8" class="js-basics__button">Task8</button>
-        <button id="task1.9" class="js-basics__button">Task9</button>
-        <button id="task1.10" class="js-basics__button">Task10</button>
-    </div>
+                <div class="js-block">
+                    <h3 class="js-block__title">Types JS</h3>
+                    <button id="task2.1" class="js-block__button">Task1</button>
+                    <button id="task2.2" class="js-block__button">Task2</button>
+                    <button id="task2.3" class="js-block__button">Task3</button>
+                    <button id="task2.4" class="js-block__button">Task4</button>
+                    <button id="task2.5" class="js-block__button">Task5</button>
+                    <button id="task2.6" class="js-block__button">Task6</button>
+                    <button id="task2.7" class="js-block__button">Task7</button>
+                    <button id="task2.8" class="js-block__button">Task8</button>
+                    <button id="task2.9" class="js-block__button">Task9</button>
+                    <button id="task2.10" class="js-block__button">Task10</button>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <div class="js-basics">
-        <h3 class="js-basics__title">Types JS</h3>
-        <button id="task2.1" class="js-basics__button">Task1</button>
-        <button id="task2.2" class="js-basics__button">Task2</button>
-        <button id="task2.3" class="js-basics__button">Task3</button>
-        <button id="task2.4" class="js-basics__button">Task4</button>
-        <button id="task2.5" class="js-basics__button">Task5</button>
-        <button id="task2.6" class="js-basics__button">Task6</button>
-        <button id="task2.7" class="js-basics__button">Task7</button>
-        <button id="task2.8" class="js-basics__button">Task8</button>
-        <button id="task2.9" class="js-basics__button">Task9</button>
-        <button id="task2.10" class="js-basics__button">Task10</button>
-    </div>
     <script src="./index.js"></script>
 </body>
 
