--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
                     <button id="task2.9" class="js-block__button">Task9</button>
                     <button id="task2.10" class="js-block__button">Task10</button>
                 </div>
+
+                <div class="js-block">
+                    <h3 class="js-block__title"> Цикли JS</h3>
+                    <button class="js-block__button" id="task3.1">Task1</button>
+                    <button class="js-block__button" id="task3.2">Task2</button>
+                    <button class="js-block__button" id="task3.3">Task3</button>
+                    <button class="js-block__button" id="task3.4">Task4</button>
+                    <button class="js-block__button" id="task3.5">Task5</button>
+                    <button class="js-block__button" id="task3.6">Task6</button>
+                    <button class="js-block__button" id="task3.7">Task7</button>
+                    <button class="js-block__button" id="task3.8">Task8</button>
+
+                </div>
             </div>
         </section>
     </main>
