Started to do functions

--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@
                     <button class="js-block__button" id="task3.6">Task6</button>
                     <button class="js-block__button" id="task3.7">Task7</button>
                     <button class="js-block__button" id="task3.8">Task8</button>
+                    <button class="js-block__button" id="task3.9">Task9</button>
+                    <button class="js-block__button" id="task3.10">Task10</button>
+                </div>
 
+                <div class="js-block">
+                    <h3 class="js-block__title"> Функції JS</h3>
+                    <button class="js-block__button" id="task4.1">Task1</button>
+                    <button class="js-block__button" id="task4.2">Task2</button>
+                    <button class="js-block__button" id="task4.3">Task3</button>
+                    <button class="js-block__button" id="task4.4">Task4</button>
                 </div>
             </div>
         </section>
